k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry
  labels:
    app.kubernetes.io/name: m4l-telemetry-api
    app.kubernetes.io/part-of: bugbytz
